--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.h (LIMIT_RELOAD_CLASS): Handle LEGACY_REGS
+	and INDEX_REGS the same as GENERAL_REGS.
+	(SECONDARY_OUTPUT_RELOAD_CLASS): Likewise.
+
 2002-01-29  Neil Booth  <neil@daikokuya.demon.co.uk>
 
         * tree.c (build_nonstandard_integer_type): Correct prototype.
