--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,16 @@
 2002-01-29  Richard Henderson  <rth@redhat.com>
 
+	* expr.c (force_operand): Ignore flag_pic for detecting pic
+	address loads.
+	* regclass.c (init_reg_sets_1): Test fixed_regs not flag_pic
+	for determining if PIC_OFFSET_TABLE_REGNUM is call-clobbered.
+	* resource.c (mark_target_live_regs): Use regs_invalidated_by_call
+	instead of open-coded loop.
+	* doc/tm.texi (PIC_OFFSET_TABLE_REGNUM): Clarify that it must
+	be fixed when in use.
+
+2002-01-29  Richard Henderson  <rth@redhat.com>
+
 	* sched-int.h (struct deps_reg): Add uses_length, clobbers_length.
 	* sched-rgn.c (propagate_deps): Update them.
 	* sched-deps.c (sched_analyze_insn): Update them.  Flush the
