2002-01-29  Aldy Hernandez  <aldyh@redhat.com>
        * rs6000.md ("*call_value_local32"): Remove constraints.
        ("*call_value_local64"): Same.
        ("*call_value_indirect_nonlocal_aix32"): Same.
        ("*call_value_nonlocal_aix32"): Same.
        ("*call_value_indirect_nonlocal_aix64"): Same.
        ("*call_value_nonlocal_aix64"): Same.
        ("*call_value_nonlocal_sysv"): Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49331 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9878,7 +9878,7 @@
    (set_attr "length" "4,8")])
 
 (define_insn "*call_value_local32"
-  [(set (match_operand 0 "" "=fg,fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:SI 1 "current_file_function_operand" "s,s"))
 	      (match_operand 2 "" "g,g")))
    (use (match_operand:SI 3 "immediate_operand" "O,n"))
@@ -9899,7 +9899,7 @@
 
 
 (define_insn "*call_value_local64"
-  [(set (match_operand 0 "" "=fg,fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:DI 1 "current_file_function_operand" "s,s"))
 	      (match_operand 2 "" "g,g")))
    (use (match_operand:SI 3 "immediate_operand" "O,n"))
@@ -9976,7 +9976,7 @@
    (set_attr "length" "8")])
 
 (define_insn "*call_value_indirect_nonlocal_aix32"
-  [(set (match_operand 0 "" "=fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:SI 1 "register_operand" "cl"))
 	      (match_operand 2 "" "g")))
    (use (reg:SI 2))
@@ -9990,7 +9990,7 @@
    (set_attr "length" "8")])
 
 (define_insn "*call_value_nonlocal_aix32"
-  [(set (match_operand 0 "" "=fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:SI 1 "call_operand" "s"))
 	      (match_operand 2 "" "g")))
    (use (match_operand:SI 3 "immediate_operand" "O"))
@@ -10003,7 +10003,7 @@
    (set_attr "length" "8")])
 
 (define_insn "*call_value_indirect_nonlocal_aix64"
-  [(set (match_operand 0 "" "=fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:DI 1 "register_operand" "cl"))
 	      (match_operand 2 "" "g")))
    (use (reg:DI 2))
@@ -10017,7 +10017,7 @@
    (set_attr "length" "8")])
 
 (define_insn "*call_value_nonlocal_aix64"
-  [(set (match_operand 0 "" "=fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:DI 1 "call_operand" "s"))
 	      (match_operand 2 "" "g")))
    (use (match_operand:SI 3 "immediate_operand" "O"))
@@ -10067,7 +10067,7 @@
    (set_attr "length" "4,8,4,8")])
 
 (define_insn "*call_value_nonlocal_sysv"
-  [(set (match_operand 0 "" "=fg,fg,fg,fg")
+  [(set (match_operand 0 "" "")
 	(call (mem:SI (match_operand:SI 1 "call_operand" "cl,cl,s,s"))
 	      (match_operand 2 "" "g,g,g,g")))
    (use (match_operand:SI 3 "immediate_operand" "O,n,O,n"))
