--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-29  Aldy Hernandez  <aldyh@redhat.com>
+
+        * rs6000.md ("*call_value_local32"): Remove constraints.
+        ("*call_value_local64"): Same.
+        ("*call_value_indirect_nonlocal_aix32"): Same.
+        ("*call_value_nonlocal_aix32"): Same.
+        ("*call_value_indirect_nonlocal_aix64"): Same.
+        ("*call_value_nonlocal_aix64"): Same.
+        ("*call_value_nonlocal_sysv"): Same.
+
 2002-01-29  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/elf.h (SDB_DEBUGGING_INFO): Undef.
