Fix markup last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49332 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -5603,7 +5603,7 @@ processor's ``application binary interface'' (ABI)@.  When this macro
 is defined, RTL is generated for this register once, as with the stack
 pointer and frame pointer registers.  If this macro is not defined, it
 is up to the machine-dependent files to allocate such a register (if
-necessary).  Note that this register must be fixed when in use (e.g.
+necessary).  Note that this register must be fixed when in use (e.g.@:
 when @code{flag_pic} is true).
 
 @findex PIC_OFFSET_TABLE_REG_CALL_CLOBBERED
