* cselib.c (cselib_record_sets): Use IF_THEN_ELSE result 	in cselib_lookup.
	* gcc.c-torture/execute/20020129-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49333 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* cselib.c (cselib_record_sets): Use IF_THEN_ELSE result
+	in cselib_lookup.
+
 2002-01-29  Aldy Hernandez  <aldyh@redhat.com>
 
         * rs6000.md ("*call_value_local32"): Remove constraints.
