--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020129-1.c: New test.
+
 2002-01-29  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.c-torture/compile/20000224-1.c: Update.
