--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-29  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/execute/991118-1.c: Cast various constants back
+	to long long.
+	* gcc.c-torture/execute/bf64-1.c: Likewise.
+
 2002-01-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020129-1.c: New test.
