--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-30  David Billinghurst  <David.Billinghurst@riotinto.com>
+
+	* g77.dg/f77-edit-i-out.f:  Escape \. Allow \r\n and \r.
+
 2002-01-29  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/991118-1.c: Cast various constants back
