* sched-deps.c (sched_analyze): Make a call read the frame pointer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49341 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-30  Richard Henderson  <rth@redhat.com>
+
+	* sched-deps.c (sched_analyze): Make a call read the frame pointer.
+
 2002-01-30  Zack Weinberg  <zack@codesourcery.com>
 
 	* expmed.c (emit_store_flag): Call protect_from_queue on op0 and op1.
