2002-01-30  David O'Brien  <obrien@FreeBSD.org> 	* config.gcc: Include sparc/biarch64.h rather than sparc/sparc_bi.h. 	* config/sparc/sparc_bi.h: Remove file. 	* config/sparc/biarch64.h: New file (rename of sparc_bi.h).
Approved by:  Richard Henderson <rth@redhat.com>
              Message-ID: <20020130102608.B9040@redhat.com>


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49346 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-30  David O'Brien  <obrien@FreeBSD.org>
+
+	* config.gcc: Include sparc/biarch64.h rather than sparc/sparc_bi.h.
+	* config/sparc/sparc_bi.h: Remove file.
+	* config/sparc/biarch64.h: New file (rename of sparc_bi.h).
+
 2002-01-30  Richard Henderson  <rth@redhat.com>
 
 	* sched-deps.c (sched_analyze): Make a call read the frame pointer.
