--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-30  Tom Tromey  <tromey@redhat.com>
+
+	* jartool.c (main): NULL-terminate new_argv.  Pass 0 as argument
+	to init_args.
+
 2002-01-11  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
