* c-decl.c (grokdeclarator): Handle type being a typedef for an 	invalid type.
testsuite:
	* gcc.dg/noncompile/20020130-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49352 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/noncompile/20020130-1.c: New test.
+
 2002-01-30  David Billinghurst  <David.Billinghurst@riotinto.com>
 
 	* g77.dg/f77-edit-i-out.f:  Escape \. Allow \r\n and \r.
