--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-decl.c (grokdeclarator): Handle type being a typedef for an
+	invalid type.
+
 2002-01-30  David O'Brien  <obrien@FreeBSD.org>
 
 	* config.gcc: Include sparc/biarch64.h rather than sparc/sparc_bi.h.
