--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-30  Steve Ellcey  <sje@cup.hp.com>
+
+	* loop.c (loop_invariant_p): Special case pic_offset_table_rtx.
+
 2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-decl.c (grokdeclarator): Handle type being a typedef for an
