--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-30  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/mips/mips.h (PARM_BOUNDARY): Guarantee alignment of
+	arguments to 64-bit boundaries on 64-bit ABIs.
+
 2002-01-30  Steve Ellcey  <sje@cup.hp.com>
 
 	* loop.c (loop_invariant_p): Special case pic_offset_table_rtx.
