--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-31  Tom Rix  <trix@redhat.com>
+
+	* gcc.dg/special/ecos.exp: Make gcsec-1.c unsupported for AIX.
+
 2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/noncompile/20020130-1.c: New test.
