* rtl.h (NOTE_INSN_LOOP_END_TOP_COND): New.         * rtl.c (note_insn_name): Update.         * emit-rtl.c (remove_unnecessary_notes): Kill it.         * stmt.c (expand_end_loop): Kill jump opt code.  Use LOOP_END_TOP_COND         to perform loop rotation.         (expand_exit_loop_top_cond): New.         * tree.h (expand_exit_loop_top_cond): Declare it.         * c-semantics.c (genrtl_while_stmt): Use it.         (genrtl_for_stmt): Likewise.
        * ada/trans.c (tree_transform) [N_Loop_Statement]: Use
        expand_exit_loop_top_cond.

        * f/ste.c (ffeste_begin_iterdo_): Use expand_exit_loop_top_cond.
        (ffeste_R819B): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49364 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-30  Richard Henderson  <rth@redhat.com>
+
+	* ste.c (ffeste_begin_iterdo_): Use expand_exit_loop_top_cond.
+	(ffeste_R819B): Likewise.
+
 2002-01-30  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* intrin.c (upcasecmp_): New function.
