--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-01-30  Richard Henderson  <rth@redhat.com>
+
+	* rtl.h (NOTE_INSN_LOOP_END_TOP_COND): New.
+	* rtl.c (note_insn_name): Update.
+	* emit-rtl.c (remove_unnecessary_notes): Kill it.
+	* stmt.c (expand_end_loop): Kill jump opt code.  Use LOOP_END_TOP_COND
+	to perform loop rotation.
+	(expand_exit_loop_top_cond): New.
+	* tree.h (expand_exit_loop_top_cond): Declare it.
+	* c-semantics.c (genrtl_while_stmt): Use it.
+	(genrtl_for_stmt): Likewise.
+
 2002-01-30  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/mips/mips.h (PARM_BOUNDARY): Guarantee alignment of
