--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-30  Richard Henderson  <rth@redhat.com>
+
+	* trans.c (tree_transform) [N_Loop_Statement]: Use
+	expand_exit_loop_top_cond.
+
 2001-12-23  Richard Henderson  <rth@redhat.com>
 
 	* utils.c (end_subprog_body): Push GC context around
