Record PR number last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49365 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 2002-01-30  Richard Henderson  <rth@redhat.com>
 
+	PR opt/5076
 	* rtl.h (NOTE_INSN_LOOP_END_TOP_COND): New.
 	* rtl.c (note_insn_name): Update.
 	* emit-rtl.c (remove_unnecessary_notes): Kill it.
