--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Richard Sandiford  <rsandifo@redhat.com>
+
+	* ifcvt.c (noce_process_if_block): Make a copy of the destination
+	when copying back from a temporary.
+
 2002-01-30  Richard Henderson  <rth@redhat.com>
 
 	* ifcvt.c (dead_or_predicable): Handling merging when other_bb
