--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,6 @@
+2002-01-31  Philipp Thomas  <pthomas@suse.de>
+	* el.po: New file.
+
 2002-01-29  Philipp Thomas  <pthomas@suse.de>
 	* es.po, fr.po, ja.po: Updated to current versions.
 
