gcc: 	* gccbug.in: Follow GNU Coding Standards for --version.  Use GCC 	version rather than GNATS version in --version output.
gcc/f:
	* g77spec.c (lang_specific_driver): Follow GNU Coding Standards
	for --version.

gcc/java:
	* gjavah.c (version), jcf-dump.c (version), jv-scan.c (version):
	Follow GNU Coding Standards for --version.

libjava:
	* gnu/gcj/convert/Convert.java: Only include one copyright year in
	--version output.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49372 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* g77spec.c (lang_specific_driver): Follow GNU Coding Standards
+	for --version.
+
 2002-01-30  Richard Henderson  <rth@redhat.com>
 
 	* ste.c (ffeste_begin_iterdo_): Use expand_exit_loop_top_cond.
