--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gjavah.c (version), jcf-dump.c (version), jv-scan.c (version):
+	Follow GNU Coding Standards for --version.
+
 2002-01-28  Tom Tromey  <tromey@redhat.com>
 
 	* expr.c (build_jni_stub): Ensure storage for `meth' is
