--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gnu/gcj/convert/Convert.java: Only include one copyright year in
+	--version output.
+
 2002-01-30  Tom Tromey  <tromey@redhat.com>
 
 	* java/net/natPlainSocketImpl.cc (_Jv_recv): Added template
