--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-31  Kazu Hirata  <kazu@hxi.com>
+
+	* rtlanal.c (subreg_regno_offset): Do not use
+	SUBREG_REGNO_OFFSET.
+	* system.h: Add SUBREG_REGNO_OFFSET to the GCC poison list.
+	* doc/tm.texi (SUBREG_REGNO_OFFSET): Remove.
+
 2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gccbug.in: Follow GNU Coding Standards for --version.  Use GCC
