--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-01  David.Billinghurst <David.Billinghurst@riotinto.com>
+
+	PR fortran/3743
+	* g77.f-torture/execute/f90-intrinsic-bit.x: Remove
+	* g77.f-torture/compile/pr3743.x: Remove
+
 2002-01-31  Tom Rix  <trix@redhat.com>
 
 	* gcc.dg/special/ecos.exp: Make gcsec-1.c unsupported for AIX.
