--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-31  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc (state::enter_subroutine): New method.
+	(handle_jsr_insn): Use it.
+	(state::merge): When processing a `ret', correctly use
+	subroutine's state to determine which local variables have
+	changed.
+	(push_exception_jump): Don't let stack overflow.
+
 2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gnu/gcj/convert/Convert.java: Only include one copyright year in
