--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,19 @@
+2002-02-01  Jason Merrill  <jason@redhat.com>
+
+	PR c++/4872
+	* decl.c (finish_function): Warn about a non-void function with 
+	no return statement.
+
+	* error.c (dump_scope): Don't add TFF_DECL_SPECIFIERS.
+	(dump_function_decl): Always dump parms.
+
+	* decl2.c (finish_static_data_member_decl): Complain about a local
+	class with a static data member.
+
+	PR c++/4286
+	* search.c (lookup_field_1): Don't xref a static data member
+	just because we looked it up.
+
 2002-01-31  Jason Merrill  <jason@redhat.com>
 
 	* Make-lang.in (parse.c): Handle .output file.
