--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* doc/install.texi (avr): Update outdated URL.
+
 2002-01-30  Andrew Haley  <aph@cambridge.redhat.com>
 
         * config/stormy16/stormy16.md (pushqi): New.
