--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-01  Janis Johnson  <janis187@us.ibm.com>
+
+	PR target/5469
+	* gcc.dg/20020201-1.c: New test.
+
 2002-02-01  David.Billinghurst <David.Billinghurst@riotinto.com>
 
 	PR fortran/3743
