--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-01  Jason Merrill  <jason@redhat.com>
 
+	* typeck.c (build_component_ref): Always complain about offsetof
+	constructs on non-PODs.  Only make it an error for members of
+	virtual bases.
+
 	* error.c (dump_scope): Don't add TFF_DECL_SPECIFIERS.
 	(dump_function_decl): Always dump parms.
 
