--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR java/4972
+	* aclocal.m4, acinclude.m4 (AM_ICONV): Put linking flags 
+	for libiconv in LIBICONV variable.
+	* configure: Regenerated.
+
 2002-01-31  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (state::enter_subroutine): New method.
